--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^15.0.7",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
@@ -52,6 +52,12 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "webpack-bundle-analyzer": "^4.10.2"
+  },
+  "overrides": {
+    "@testing-library/react": {
+      "@types/react": "$@types/react",
+      "@types/react-dom": "$@types/react-dom"
+    }
   },
   "engines": {
     "node": ">=18.0.0",
