--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "vercel-build": "npm install --legacy-peer-deps && next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
@@ -26,8 +27,8 @@
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-share": "^5.2.2",
     "recharts": "^2.15.3",
     "zustand": "^5.0.5"
@@ -36,13 +37,13 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
@@ -53,15 +54,12 @@
     "typescript": "^5",
     "webpack-bundle-analyzer": "^4.10.2"
   },
-  "overrides": {
-    "@testing-library/react": {
-      "@types/react": "$@types/react",
-      "@types/react-dom": "$@types/react-dom"
-    }
-  },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
+  },
+  "resolutions": {
+    "@types/react": "^18.2.0"
   },
   "keywords": [
     "formwave",
