--- a/package.json
+++ b/package.json
@@ -1,73 +1,1 @@
-{
-  "name": "formwave-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "vercel-build": "npm install --legacy-peer-deps && next build",
-    "build:analyze": "ANALYZE=true next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "export": "next export",
-    "clean": "if exist .next rmdir /s /q .next && if exist out rmdir /s /q out"
-  },
-  "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@hello-pangea/dnd": "^18.0.1",
-    "@heroicons/react": "^2.2.0",
-    "@supabase/supabase-js": "^2.49.10",
-    "critters": "^0.0.23",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.511.0",
-    "nanoid": "^5.1.5",
-    "next": "15.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-share": "^5.2.2",
-    "recharts": "^2.15.3",
-    "zustand": "^5.0.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/forms": "^0.5.10",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^29.5.14",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5",
-    "webpack-bundle-analyzer": "^4.10.2"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
-  "resolutions": {
-    "@types/react": "^18.2.0"
-  },
-  "keywords": [
-    "formwave",
-    "form-builder",
-    "nextjs",
-    "react",
-    "typescript"
-  ],
-  "author": "FormWave Team",
-  "license": "MIT"
-}
+{"name":"formwave-frontend","version":"0.1.0","private":true,"scripts":{"dev":"next dev --turbopack","build":"next build","vercel-build":"npm install --legacy-peer-deps && next build","start":"next start"},"dependencies":{"react":"^18.2.0","react-dom":"^18.2.0","next":"15.3.3"},"devDependencies":{"@types/react":"^18.2.0","@types/react-dom":"^18.2.0","typescript":"^5"},"engines":{"node":">=18.0.0","npm":">=8.0.0"}}
